# rw-art-pipeline

./: .gitignore  README.md  pyproject.toml
reference-assets/generic-cube-workbench-1x1/: ThingDef.xml
rw_art_pipeline/: __init__.py  cli.py  scenario.py  template_catalog.py
rw_art_pipeline/template_assets/: catalog.json
tests/: test_pipeline.py  test_scenario.py  test_templates.py
tools/: generate_generic_workbench.py  review_cube_workbench.py
